--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
             <div class="form-group">
                 <label for="exampleInputPassword1">Frequency (min) </label>
-                <input type="text" class="form-control" id="freq" placeholder="">
+                <input type="text" class="form-control" id="trainFreq" placeholder="">
             </div>
 
             <button type="submit" class="btn btn-primary" id="button">Submit</button>
@@ -121,13 +121,11 @@
 
     var trainName = $("#name").val().trim();
     var trainDest = $("#traindestination").val().trim();
-    var firstTrainTime = moment($("#firsttrain").val().trim(), "DD/MM/YY").format("X");
-    var freq = $("#freq").val().trim();
+    var firstTrainTime = moment($("#firsttrain").val().trim(), " HH:mm ").format("X");
+    var freq = $("#trainFreq").val().trim();
 
 
-    console.log(trainName);
-
-    console.log("Train destination is" + trainDest);
+    console.log("First Train arrives at" + firstTrainTime);
 
   // Creates local "temporary" object for holding employee data
   var newTrain = {
@@ -143,7 +141,7 @@
   // Logs everything to console
   console.log(newTrain.name);
   console.log(newTrain.destination);
-  console.log(newTrain.firsttrain);
+  console.log("First Train is at " + newTrain.firsttrain);
   console.log(newTrain.trainfreq);
   });
 
@@ -165,17 +163,40 @@
         console.log(firstTrainTime);
         console.log(freq);
 
-  // Prettify the employee start
-  var firstTrainTimepretty = moment.unix(firstTrainTime).format("MM/DD/YY");
+  // Prettify the first train arrival time
+  var firstTrainTimepretty = moment.unix(firstTrainTime).format("hh:mm");
 
-  // Calculate the months worked using hardcore math
-  // To calculate the months worked
-  var nextArrival = moment().diff(moment.unix(firstTrainTime, "X"), "months");
-  console.log(nextArrival);
+  console.log("----------");
+  console.log("First Train arrives at" + firstTrainTimepretty);
+  console.log("----------");
+  
+  // math //
 
-  // Calculate the total billed rate
-  var minAway = nextArrival * freq;
-  console.log(minAway);
+  // First Time (pushed back 1 year to make sure it comes before current time)
+    var firstTimeConverted = moment(firstTrainTime, "HH:mm").subtract(1, "years");
+    console.log(firstTimeConverted);
+
+    // Current Time
+    var currentTime = moment();
+    console.log("CURRENT TIME: " + moment(currentTime).format("hh:mm"));
+
+    // Difference between the times
+    var diffTime = moment().diff(moment(firstTimeConverted), "minutes");
+    console.log("DIFFERENCE IN TIME: " + diffTime);
+
+    // Time apart (remainder)
+    var tRemainder = diffTime % freq;
+    console.log(tRemainder);
+
+    // Minute Until Train
+    var minAway = freq - tRemainder;
+    console.log("MINUTES TILL TRAIN: " + minAway);
+
+    // Next Train
+    var nextArrival = moment().add(minAway, "minutes"). format("hh:mm") ;
+    console.log("ARRIVAL TIME: " + nextArrival);
+  // end //
+
 
     $("#train-table").append("<tr><td>" + trainName + "</td><td>" + trainDest + "</td><td>" +
       freq + "</td><td>" + nextArrival + "</td><td>" + minAway + "</td><tr>");
